--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
-  text-align: center;
+:root {
+  --grid-size: 5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  margin: 0;
+  background-color: #333;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 3rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.title {
+  margin: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.subtext {
+  color: #ccc;
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.board {
+  display: -ms-inline-grid;
+  display: inline-grid;
+  padding: 10px;
+  -ms-grid-columns: (60px) [var];
+  grid-template-columns: repeat(var(--grid-size), 60px);
+  -ms-grid-rows: (60px) [var];
+  grid-template-rows: repeat(var(--grid-size), 60px);
+  gap: 4px;
+  background-color: #777;
+}
+
+.board > * {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: white;
+  border: 2px solid #bbb;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+[data-status="hidden"] {
+  background-color: #bbb;
+  cursor: pointer;
+}
+
+.board [data-status="mine"] {
+  background-color: red;
+}
+/* 
+  .board [data-status="number"] {
+    background-color: none;
+  } */
+
+[data-status="number"] {
+  /* background-color: none; */
+
+  background-color: none;
+}
+
+.board [data-status="marked"] {
+  background-color: yellow;
+}
+
+button {
+  cursor: pointer;
+  font-size: 3rem;
+  color: #fff;
+  background: #959595;
+  border: none;
+  padding: 5px;
+}
+
+.app {
+  width: 100vw !important;
+  text-align: center;
+  height: 100vh !important;
+  padding-top: 25px;
+}
+
+.info {
+  background: #777;
+  width: fit-content;
+  margin: auto;
+  padding: 20px;
+  border: 2px solid #bbbbbb;
 }
