--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 :root {
   --grid-size: 5;
+  --tile-size: 3vw;
+
+  /* @media (max-width: 400px) {
+    --tile-size: 30vw;
+  } */
 }
 
 * {
@@ -22,6 +27,11 @@ body {
   -ms-flex-direction: column;
   flex-direction: column;
   color: white;
+
+  /* ///// */
+
+  height: 100vh;
+  /* background: red; */
 }
 
 .title {
@@ -39,11 +49,22 @@ body {
   display: inline-grid;
   padding: 10px;
   -ms-grid-columns: (60px) [var];
-  grid-template-columns: repeat(var(--grid-size), 60px);
+  grid-template-columns: repeat(var(--grid-size), var(--tile-size));
   -ms-grid-rows: (60px) [var];
-  grid-template-rows: repeat(var(--grid-size), 60px);
+  grid-template-rows: repeat(var(--grid-size), var(--tile-size));
   gap: 4px;
   background-color: #777;
+  z-index: 9;
+  position: absolute;
+  border-radius: 9px;
+
+  /* top: calc(50% - (var(--grid-size) * (60px + 4px) - 4px) / 2);
+  /* Calculate left position */
+  /* left: calc(50% - (var(--grid-size) * (60px + 4px) - 4px) / 2); */
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .board > * {
@@ -83,28 +104,97 @@ body {
   /* background-color: none; */
 
   background-color: none;
-  transition: background-color 0.2s;
+  /* transition: background-color 0.2s; */
 }
 
 .board [data-status="marked"] {
-  background-color: yellow;
+  background-color: #d9d96f;
   transition: background-color 0.2s;
 }
 
 button {
   cursor: pointer;
-  /* font-size: 3rem; */
+  font-size: 28px;
   color: #fff;
   background: #959595;
   border: none;
   padding: 5px;
+
+  @media (max-width: 576px) {
+    font-size: 16px;
+  }
 }
 
-.app {
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.gradient {
+  --size: 250px;
+  --speed: 30s;
+  --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
+
+  position: absolute;
+  left: calc(50% - var(--size) / 2);
+  top: calc(50% - var(--size) / 2);
+  width: var(--size);
+  height: var(--size);
+  filter: blur(calc(var(--size) / 5));
+  background-image: linear-gradient(#fff, #fff);
+  animation: rotate var(--speed) var(--easing) alternate infinite;
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+}
+
+@media (min-width: 720px) {
+  .gradient {
+    --size: 500px;
+  }
+}
+
+.game {
   width: 100vw !important;
   text-align: center;
   height: 100vh !important;
   padding-top: 25px;
+  position: relative;
+
+  /* margin: auto;
+  overflow: auto;
+  background: linear-gradient(
+    315deg,
+    rgba(101, 0, 94, 1) 3%,
+    rgba(60, 132, 206, 1) 38%,
+    rgba(48, 238, 226, 1) 68%,
+    rgba(255, 25, 25, 1) 98%
+  );
+  animation: gradient 15s ease infinite;
+  background-size: 400% 400%;
+  background-attachment: fixed; */
+
+  /* background-color: red; */
+  position: absolute;
+  inset: 0;
+  /* display: flex; */
+  place-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 100% 100%;
+  }
+  100% {
+    background-position: 0% 0%;
+  }
 }
 
 .info {
@@ -120,6 +210,13 @@ button {
   font-size: 28px;
   width: 100vh;
   justify-content: space-between;
+  border-radius: 9px;
+
+  @media (max-width: 576px) {
+    max-width: 100%;
+    flex-wrap: wrap;
+    font-size: 16px;
+  }
 }
 
 .time {
@@ -127,5 +224,90 @@ button {
 }
 
 .lives {
-  width: 250px;
+  width: 194px;
+  display: inline-block;
+  text-align: left;
+}
+
+.menu {
+  background: #777;
+  padding: 20px;
+  text-align: center;
+  z-index: 9;
+  /* display: inline-block; */
+  /* margin: auto; */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 9px;
+
+  font-size: 34px;
+}
+
+.high-scores {
+  text-align: center;
+}
+
+input {
+  height: 50px;
+}
+
+.buttons {
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.App {
+  height: 100vh;
+  width: 100vw;
+  padding-top: 60px;
+}
+
+h2 {
+  text-align: center;
+  margin-top: 0;
+}
+ul {
+  list-style: none;
+  text-align: left;
+  padding-left: 0;
+}
+
+.tile {
+  @media (max-width: 1024) {
+    font-size: 48px;
+  }
+  @media (max-width: 992px) {
+    font-size: 40px;
+  }
+  @media (max-width: 768px) {
+    font-size: 32px;
+  }
+  @media (max-width: 576px) {
+    font-size: 22px;
+  }
+  @media (max-width: 400px) {
+    font-size: 18px;
+  }
+}
+
+.active {
+  outline: 2px solid red;
+}
+
+.flag-button {
+  top: 157px;
+  position: absolute;
+  left: 10px;
+  width: 40px;
+  height: 40px;
+  font-size: 18px;
+  display: block;
+
+  @media (min-width: 1024px) {
+    display: none;
+  }
 }
