--- a/src/App.scss
+++ b/src/App.scss
@@ -278,6 +278,12 @@ body {
       padding-bottom: 0px;
       align-items: center;
 
+      position: absolute;
+      top: 20px;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+
       @media (max-width: 992px) {
         width: 100%;
         border: none;
